--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Trang chủ</title>
+        <title>Home</title>
         <!-- ! Style -->
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <link rel="stylesheet" href="./assets/css/base.css" />
@@ -15,34 +15,128 @@
             href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
             rel="stylesheet"
         />
+        <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        />
     </head>
     <body>
         <header class="header">
             <div class="main-content">
                 <div class="header-inner">
-                    <div class="header__logo--wrap">
-                        <a href="#"
-                            ><img
-                                src="https://upload.wikimedia.org/wikipedia/vi/thumb/5/55/Logo_Tr%C6%B0%E1%BB%9Dng_%C4%90%E1%BA%A1i_h%E1%BB%8Dc_Ngo%E1%BA%A1i_ng%E1%BB%AF%2C_%C4%90%E1%BA%A1i_h%E1%BB%8Dc_Hu%E1%BA%BF.svg/1024px-Logo_Tr%C6%B0%E1%BB%9Dng_%C4%90%E1%BA%A1i_h%E1%BB%8Dc_Ngo%E1%BA%A1i_ng%E1%BB%AF%2C_%C4%90%E1%BA%A1i_h%E1%BB%8Dc_Hu%E1%BA%BF.svg.png"
+                    <a href="#">
+                        <div class="header__logo--wrap">
+                            <img
+                                src="./assets/images/logo.svg.png"
                                 alt="DHNN"
                                 class="header__logo"
-                        /></a>
-                    </div>
+                            />
+                            <span>Dung Le</span>
+                        </div>
+                    </a>
                     <nav class="header__nav">
                         <ul class="header__nav--list">
                             <li class="header__nav--item">
-                                <a href="">Cá nhân</a>
+                                <a href="">Personal</a>
                             </li>
                             <li class="header__nav--item">
-                                <a href="">Nhóm</a>
+                                <a href="">Group</a>
                             </li>
                             <li class="header__nav--item">
-                                <a href="">Thành viên</a>
+                                <a href="">Members</a>
+                            </li>
+                            <li class="header__nav--item">
+                                <a href="">Contact</a>
                             </li>
                         </ul>
                     </nav>
                 </div>
             </div>
         </header>
+        <section class="hero">
+            <div class="main-content">
+                <div class="hero-inner">
+                    <div class="hero-left">
+                        <h1 class="hero__heading">
+                            Hello! <span>I'm Dung Le</span>
+                        </h1>
+                        <p class="hero__label">
+                            Welcome to my Journey
+                            <svg width="100" height="100" viewBox="0 0 100 100">
+                                <polygon
+                                    points="50,15 61,39 88,39 66,57 74,85 50,70 26,85 34,57 12,39 39,39"
+                                    fill="currentColor"
+                                    stroke="currentColor"
+                                    stroke-width="2"
+                                />
+                            </svg>
+                        </p>
+                        <p class="hero__desc">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Consequatur ex illum necessitatibus ut
+                            excepturi eius vel totam, libero reprehenderit sit
+                            veniam. Mollitia, dolores dolor nostrum id ad
+                            accusantium? Quos, ad?
+                        </p>
+                        <ul class="hero-list">
+                            <li class="hero-item">Lorem ipsum dolor sit.</li>
+                            <li class="hero-item">Lorem ipsum dolor sit.</li>
+                            <li class="hero-item">
+                                Lorem ipsum dolor sit amet.
+                            </li>
+                        </ul>
+                        <a href="#" class="btn hero-btn">Click me!</a>
+                    </div>
+                    <div class="hero-right">
+                        <div class="hero-right__img--wrap">
+                            <img
+                                src="./assets/images/hero.png"
+                                alt="Dung Le"
+                                class="hero-right__img"
+                            />
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="hero-end">
+                <ul class="hero-end-list">
+                    <li class="hero-end-item">LOVE</li>
+                    <li class="hero-end-item">LOVE</li>
+                    <li class="hero-end-item">LOVE</li>
+                    <li class="hero-end-item">LOVE</li>
+                    <li class="hero-end-item">LOVE</li>
+                    <li class="hero-end-item">LOVE</li>
+                </ul>
+            </div>
+            <div class="main-content">
+                <div class="hero-inner2">
+                    <ul class="hero-inner2-list">
+                        <li class="hero-inner2-item">
+                            <a href=""
+                                ><i class="fa-brands fa-facebook-f"></i
+                                >FACEBOOK</a
+                            >
+                        </li>
+                        <li class="hero-inner2-item">
+                            <a href=""
+                                ><i class="fa-brands fa-youtube"></i>YOUTUBE</a
+                            >
+                        </li>
+                        <li class="hero-inner2-item">
+                            <a href=""
+                                ><i class="fa-brands fa-twitter"></i>TWITTER</a
+                            >
+                        </li>
+                        <li class="hero-inner2-item">
+                            <a href=""
+                                ><i class="fa-solid fa-envelope"></i
+                                >WONHARY_TEST@GMAIL.COM</a
+                            >
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
