--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
                     <nav class="header__nav">
                         <ul class="header__nav--list">
                             <li class="header__nav--item">
+                                <a href="">Home</a>
+                            </li>
+                            <li class="header__nav--item">
                                 <a href="">Personal</a>
                             </li>
                             <li class="header__nav--item">
@@ -215,5 +218,113 @@
                 </div>
             </div>
         </section>
+        <main style="height: 6000px">
+            <section class="new-image">
+                <div class="main-content">
+                    <div class="new-image-inner">
+                        <h2 class="heading">New Image</h2>
+                        <div class="new-image-inner-bottom">
+                            <div class="carousel">
+                                <div class="controls">
+                                    <button
+                                        type="button"
+                                        class="btn-control"
+                                        button-click-left
+                                    >
+                                        <span class="material-icons-outlined">
+                                            <i
+                                                class="fa-solid fa-arrow-left"
+                                            ></i>
+                                        </span>
+                                    </button>
+                                    <button
+                                        type="button"
+                                        class="btn-control"
+                                        button-click-play
+                                        data-state="pause"
+                                    >
+                                        <span
+                                            class="material-icons-outlined icon"
+                                        >
+                                            <i class="fa-solid fa-pause"></i>
+                                        </span>
+                                    </button>
+                                    <button
+                                        type="button"
+                                        class="btn-control"
+                                        button-click-right
+                                    >
+                                        <span class="material-icons-outlined">
+                                            <i
+                                                class="fa-solid fa-arrow-right"
+                                            ></i>
+                                        </span>
+                                    </button>
+                                </div>
+                                <div class="slide-center">
+                                    <div class="slider">
+                                        <div class="slide active">
+                                            <img
+                                                src="https://images.unsplash.com/photo-1575936123452-b67c3203c357?fm=jpg&w=3000&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                                                alt=""
+                                            />
+                                            <div class="slide__desc">
+                                                Image 1
+                                            </div>
+                                        </div>
+                                        <div class="slide">
+                                            <img
+                                                src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg"
+                                                alt=""
+                                            />
+                                            <div class="slide__desc">
+                                                Image 2
+                                            </div>
+                                        </div>
+                                        <div class="slide">
+                                            <img
+                                                src="https://us.123rf.com/450wm/shushanto/shushanto2212/shushanto221200033/195442710-key-visual-of-colorful-tree-of-life-in-front-of-a-galaxy.jpg"
+                                                alt=""
+                                            />
+                                            <div class="slide__desc">
+                                                Image 3
+                                            </div>
+                                        </div>
+                                        <div class="slide">
+                                            <img
+                                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRTzn-P45wR44wkG17J0OLTIFLT55fw2B5BoFCysaJI8UIyFXqY_UcuGFX2F5nRP4bgkWI&usqp=CAU"
+                                                alt=""
+                                            />
+                                            <div class="slide__desc">
+                                                Image 4
+                                            </div>
+                                        </div>
+                                        <div class="slide">
+                                            <img
+                                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSwx2kKtNXXx1MLWbf0olwwg5louHT5OZWFj0A7c627PSl8O9Yu5YNV4vjLyQMW8umHpHY&usqp=CAU"
+                                                alt=""
+                                            />
+                                            <div class="slide__desc">
+                                                Image 5
+                                            </div>
+                                        </div>
+                                        <div class="slide">
+                                            <img
+                                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHPH2cxL6UCMqm3p3CFJBvO-lHiazzS_VjgOT-KOmp2ox1ic3gefHr9N_yJu9QGifM__s&usqp=CAU"
+                                                alt=""
+                                            />
+                                            <div class="slide__desc">
+                                                Image 6
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <script src="./assets/js/index.js"></script>
     </body>
 </html>
