--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <div class="hero-right">
                         <div class="hero-right__img--wrap">
                             <img
-                                src="./assets/images/hero.png"
+                                src="./assets/images/image-removebg.png"
                                 alt="Dung Le"
                                 class="hero-right__img"
                             />
@@ -193,25 +193,32 @@
                 <div class="hero-inner2">
                     <ul class="hero-inner2-list">
                         <li class="hero-inner2-item">
-                            <a href=""
+                            <a
+                                href="https://www.facebook.com/profile.php?id=100079043662707"
+                                target="_blank"
                                 ><i class="fa-brands fa-facebook-f"></i
                                 >FACEBOOK</a
                             >
                         </li>
                         <li class="hero-inner2-item">
-                            <a href=""
-                                ><i class="fa-brands fa-youtube"></i>YOUTUBE</a
+                            <a
+                                href="https://www.tiktok.com/@dungleldinner"
+                                target="_blank"
+                                ><i class="fa-brands fa-tiktok"></i>TIKTOK</a
                             >
                         </li>
                         <li class="hero-inner2-item">
-                            <a href=""
-                                ><i class="fa-brands fa-twitter"></i>TWITTER</a
+                            <a
+                                href="https://www.instagram.com/dungle1192005"
+                                target="_blank"
+                                ><i class="fa-brands fa-instagram"></i
+                                >INSTAGRAM</a
                             >
                         </li>
                         <li class="hero-inner2-item">
-                            <a href=""
+                            <a href="mailto:someone@example.com"
                                 ><i class="fa-solid fa-envelope"></i
-                                >WONHARY_TEST@GMAIL.COM</a
+                                >WONHARY123@GMAIL.COM</a
                             >
                         </li>
                     </ul>
@@ -265,56 +272,199 @@
                                     <div class="slider">
                                         <div class="slide active">
                                             <img
-                                                src="https://images.unsplash.com/photo-1575936123452-b67c3203c357?fm=jpg&w=3000&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                                                alt=""
+                                                src="./assets/images/new1.jpg"
+                                                alt="NewImage"
                                             />
                                             <div class="slide__desc">
-                                                Image 1
+                                                Mới đầu tập kiểu ' úi múa sao
+                                                vậy bêi , sao hay vậy','chị ơi
+                                                múa sao vậy ạ'. Các em cứ nhìn
+                                                chị mà làm theo nha 😎.
+                                            </div>
+                                        </div>
+
+                                        <div class="slide">
+                                            <img
+                                                src="./assets/images/new2.jpg"
+                                                alt="NewImage"
+                                            />
+                                            <div class="slide__desc">
+                                                Tập verrrrry mệt nhưng cũng được
+                                                relaxxxingg nha 😍 , mỗi khi
+                                                được nghỉ là phải ăn cho sướng .
+                                                Mỗi ngày đều được đổi món nha ,
+                                                nào là cơm tấm , cơm chiên , lâu
+                                                lâu còn có bún đậu mắm tôm 🙂 (
+                                                món này chê , mà nhắc mới nhớ ai
+                                                không thích có thể lựa trà sữa
+                                                ún nha hihi)
                                             </div>
                                         </div>
                                         <div class="slide">
                                             <img
-                                                src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg"
-                                                alt=""
+                                                src="./assets/images/new3.jpg"
+                                                alt="NewImage"
                                             />
                                             <div class="slide__desc">
-                                                Image 2
+                                                Đặt cơm ngon nhưng đôi lúc chị
+                                                hướng dẫn văn nghệ sợ béo tròn
+                                                nên khun ăn , phần dư thì luôn
+                                                có 2 thằng vô liêm sĩ ăn hết 😭
                                             </div>
                                         </div>
                                         <div class="slide">
                                             <img
-                                                src="https://us.123rf.com/450wm/shushanto/shushanto2212/shushanto221200033/195442710-key-visual-of-colorful-tree-of-life-in-front-of-a-galaxy.jpg"
-                                                alt=""
+                                                src="./assets/images/new4.jpg"
+                                                alt="NewImage"
                                             />
                                             <div class="slide__desc">
-                                                Image 3
+                                                💔 có lúc dư nhiều quá nên cũng
+                                                phải đi cầu xin mọi người
                                             </div>
                                         </div>
                                         <div class="slide">
                                             <img
-                                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRTzn-P45wR44wkG17J0OLTIFLT55fw2B5BoFCysaJI8UIyFXqY_UcuGFX2F5nRP4bgkWI&usqp=CAU"
-                                                alt=""
+                                                src="/assets/images/new5.jpg"
+                                                alt="NewImage"
                                             />
                                             <div class="slide__desc">
-                                                Image 4
+                                                Như một lẽ thường tình thì 2
+                                                người ăn nhiều luôn phải dọn dẹp
+                                                rác , mà hình như ai cũng có
+                                                phần giống nhau thì phải😭
                                             </div>
                                         </div>
                                         <div class="slide">
                                             <img
-                                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSwx2kKtNXXx1MLWbf0olwwg5louHT5OZWFj0A7c627PSl8O9Yu5YNV4vjLyQMW8umHpHY&usqp=CAU"
-                                                alt=""
+                                                src="./assets/images/new6.jpg"
+                                                alt="NewImage"
                                             />
                                             <div class="slide__desc">
-                                                Image 5
+                                                Gặp phải thánh locket nên hành
+                                                trình rác tới thùng cũng như
+                                                hành trình sóng tìm ra với biển
+                                                😇
                                             </div>
                                         </div>
                                         <div class="slide">
                                             <img
-                                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHPH2cxL6UCMqm3p3CFJBvO-lHiazzS_VjgOT-KOmp2ox1ic3gefHr9N_yJu9QGifM__s&usqp=CAU"
-                                                alt=""
+                                                src="./assets/images/new7.jpg"
+                                                alt="NewImage"
                                             />
                                             <div class="slide__desc">
-                                                Image 6
+                                                múa chay quá nhàn và chán cho
+                                                đến khi sở hữu được bộ đồ nghề
+                                                kiểu ... , slay quá ạ 😝
+                                            </div>
+                                        </div>
+                                        <div class="slide">
+                                            <img
+                                                src="./assets/images/new8.jpg"
+                                                alt="NewImage"
+                                            />
+                                            <div class="slide__desc">...</div>
+                                        </div>
+                                        <div class="slide">
+                                            <img
+                                                src="./assets/images/new9.jpg"
+                                                alt="NewImage"
+                                            />
+                                            <div class="slide__desc">
+                                                khoác lên mình long bào , ai
+                                                cũng hoá thần hoá tiên . Mà
+                                                khoan , này là cái gì á chứ
+                                                không còn là Human nữa 😇 (
+                                                giống anh d#m tặc trên
+                                                confession của trường mọi người
+                                                hay nhắc 😨 )
+                                            </div>
+                                        </div>
+                                        <div class="slide">
+                                            <img
+                                                src="./assets/images/new10.jpg"
+                                                alt="NewImage"
+                                            />
+                                            <div class="slide__desc">
+                                                3 Chị đẹp với đôi chân 2m 😍
+                                                không giống như ai đó ( ĐG Hùng)
+                                                , như 3 cô gái đến từ xứ sở nàng
+                                                tiên
+                                            </div>
+                                        </div>
+                                        <div class="slide">
+                                            <img
+                                                src="./assets/images/new11.jpg"
+                                                alt="NewImage"
+                                            />
+                                            <div class="slide__desc">
+                                                😅 đang mùa hè nên cũng nóng quá
+                                                nên cắt ngắn tí cho mát phải
+                                                khun thầy ( saitama from Huflis
+                                                😍 )
+                                            </div>
+                                        </div>
+                                        <div class="slide">
+                                            <img
+                                                src="./assets/images/new12.jpg"
+                                                alt="NewImage"
+                                            />
+                                            <div class="slide__desc">
+                                                sao lâu quá nhỉ , đến lượt mình
+                                                chưa 😢 thôi ngồi nghỉ đi còn
+                                                lâu mới diễn
+                                            </div>
+                                        </div>
+                                        <div class="slide">
+                                            <img
+                                                src="./assets/images/new13.jpg"
+                                                alt="NewImage"
+                                            />
+                                            <div class="slide__desc">
+                                                mọi người cứ từ từ , ngủ một
+                                                giấc xong có khi còn chưa tới
+                                                lượt
+                                            </div>
+                                        </div>
+                                        <div class="slide">
+                                            <img
+                                                src="./assets/images/new14.jpg"
+                                                alt="NewImage"
+                                            />
+                                            <div class="slide__desc">
+                                                Chị vẻ tập thử mà sao thấy nó kì
+                                                kì 😅 , không giống trong kịch
+                                                bản
+                                            </div>
+                                        </div>
+                                        <div class="slide">
+                                            <img
+                                                src="./assets/images/new15.jpg"
+                                                alt="NewImage"
+                                            />
+                                            <div class="slide__desc">
+                                                em cứ tin ở chị , đồ ba cái tóc
+                                                này để chị . Quan trọng phải là
+                                                thần thái😘
+                                            </div>
+                                        </div>
+                                        <div class="slide">
+                                            <img
+                                                src="./assets/images/new16.jpg"
+                                                alt="NewImage"
+                                            />
+                                            <div class="slide__desc">
+                                                team đỏ , rực cháy trong ánh
+                                                nắng mặt trời . Toàn trai đẹp
+                                                gái xinhhhh ❤️
+                                            </div>
+                                        </div>
+                                        <div class="slide">
+                                            <img
+                                                src="./assets/images/new17.jpg"
+                                                alt="NewImage"
+                                            />
+                                            <div class="slide__desc">
+                                                Titanic mà ở Huflis 😂
                                             </div>
                                         </div>
                                     </div>
