--- a/index.html
+++ b/index.html
@@ -153,18 +153,16 @@
                             </svg>
                         </p>
                         <p class="hero__desc">
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Consequatur ex illum necessitatibus ut
-                            excepturi eius vel totam, libero reprehenderit sit
-                            veniam. Mollitia, dolores dolor nostrum id ad
-                            accusantium? Quos, ad?
+                            Thanh xuân trôi đi là không còn quay lại, muốn lắm
+                            cái lúc thời gian như đóng băng quay lại lúc ta vui
+                            buồn . Kỉ niệm của tôi và mọi người trong đội múa kỉ
+                            niệm 20 năm và lễ tốt nghiệp cho k17 là những khoảng
+                            khắc khó phai và vui nhộn nhất 🥹
                         </p>
                         <ul class="hero-list">
-                            <li class="hero-item">Lorem ipsum dolor sit.</li>
-                            <li class="hero-item">Lorem ipsum dolor sit.</li>
-                            <li class="hero-item">
-                                Lorem ipsum dolor sit amet.
-                            </li>
+                            <li class="hero-item">Kỉ niệm</li>
+                            <li class="hero-item">Niềm vui</li>
+                            <li class="hero-item">Nỗi buồn</li>
                         </ul>
                         <a href="#" class="btn hero-btn">Click me!</a>
                     </div>
@@ -175,6 +173,69 @@
                                 alt="Dung Le"
                                 class="hero-right__img"
                             />
+                            <svg
+                                class="hero-right__decor1"
+                                width="72"
+                                height="72"
+                                viewBox="0 0 72 72"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    fill-rule="evenodd"
+                                    clip-rule="evenodd"
+                                    d="M40.8882 0.317006L43.848 0.806546L39.4206 27.5746C39.8114 27.7129 40.1875 27.8782 40.547 28.0681L57.1192 8.06945L59.4291 9.98363L42.9102 29.918C43.2105 30.254 43.4836 30.6132 43.727 30.9919L68.4359 21.0909L69.5518 23.8756L44.8796 33.762C45.042 34.5005 45.1072 35.2697 45.0631 36.0529L71.7257 40.8149L71.1983 43.7682L44.3716 38.9769C44.1766 39.4263 43.9446 39.8535 43.6801 40.2555L65.0285 57.4752L63.145 59.8103L41.6062 42.4369C41.2391 42.7065 40.8505 42.9466 40.4443 43.1547L51.0985 69.2096L48.3216 70.3451L37.5613 44.0305C37.274 44.0639 36.9831 44.0828 36.6896 44.0864L32.099 71.8415L29.1392 71.3519L33.7298 43.5968C33.1834 43.4035 32.6657 43.1571 32.1817 42.8648L13.4888 65.4227L11.1788 63.5085L29.9277 40.8831C29.704 40.6021 29.4981 40.3072 29.3114 40.0003L2.71779 50.6566L1.60192 47.8719L28.2281 37.2025C28.1561 36.8311 28.1086 36.4524 28.0871 36.0685L0.319842 31.1092L0.847297 28.156L28.4501 33.0858C28.5521 32.7529 28.6734 32.4298 28.8127 32.1176L7.10353 14.6068L8.98701 12.2717L30.5085 29.6311C30.7763 29.3588 31.0617 29.1051 31.3626 28.8716L21.0703 3.70153L23.8471 2.56606L34.032 27.4732C34.8063 27.2298 35.623 27.0953 36.4608 27.085L40.8882 0.317006Z"
+                                    fill="currentColor"
+                                />
+                            </svg>
+                            <svg
+                                class="hero-right__decor2"
+                                width="547"
+                                height="363"
+                                viewBox="0 0 547 363"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M546 362.016C512 363.516 448.5 346.616 466.5 267.016C489 167.516 483 164.516 341.5 146.516C200 128.516 169.5 66.5002 199.5 24.016C224.753 -11.7445 323 -14.4839 311.5 78.0161C300 170.516 91.5 202.516 1 49.5162"
+                                    stroke="url(#paint0_linear_0_317)"
+                                />
+                                <defs>
+                                    <linearGradient
+                                        id="paint0_linear_0_317"
+                                        x1="-103"
+                                        y1="-56.0001"
+                                        x2="486"
+                                        y2="313"
+                                        gradientUnits="userSpaceOnUse"
+                                    >
+                                        <stop />
+                                        <stop
+                                            offset="0.553176"
+                                            stop-color="currentColor"
+                                        />
+                                        <stop offset="1" stop-opacity="0" />
+                                    </linearGradient>
+                                </defs>
+                            </svg>
+                            <i
+                                class="fa-solid fa-star hero-right__decor hero-right__decor3"
+                            ></i>
+                            <i
+                                class="fa-solid fa-star hero-right__decor hero-right__decor4"
+                            ></i>
+                            <i
+                                class="fa-solid fa-star hero-right__decor hero-right__decor5"
+                            ></i>
+                            <i
+                                class="fa-solid fa-star hero-right__decor hero-right__decor6"
+                            ></i>
+                            <i
+                                class="fa-solid fa-star hero-right__decor hero-right__decor7"
+                            ></i>
+                            <i
+                                class="fa-solid fa-star hero-right__decor hero-right__decor8"
+                            ></i>
                         </div>
                     </div>
                 </div>
@@ -216,7 +277,7 @@
                             >
                         </li>
                         <li class="hero-inner2-item">
-                            <a href="mailto:someone@example.com"
+                            <a href="mailto:wonhary123@gmail.com"
                                 ><i class="fa-solid fa-envelope"></i
                                 >WONHARY123@GMAIL.COM</a
                             >
