fix thiếu dấu chấm

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                                         </div>
                                         <div class="slide">
                                             <img
-                                                src="/assets/images/new5.jpg"
+                                                src="./assets/images/new5.jpg"
                                                 alt="NewImage"
                                             />
                                             <div class="slide__desc">
